// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakpoints should add a breakpoint 1`] = `
Array [
  Object {
    "breakpoints": Array [
      Object {
        "astLocation": Object {
          "index": 0,
          "name": undefined,
          "offset": Object {
            "column": 1,
            "line": 2,
            "sourceId": "a",
            "sourceUrl": "http://localhost:8000/examples/a",
          },
        },
        "disabled": false,
        "generatedLocation": Object {
          "column": 1,
          "line": 2,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "id": "a:2:1",
        "location": Object {
          "column": 1,
          "line": 2,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "options": Object {
          "condition": null,
          "hidden": false,
          "logValue": null,
        },
        "originalText": "return a",
        "text": "return a",
      },
    ],
    "source": Object {
      "actors": Array [
        Object {
          "actor": "a-actor",
          "source": "a",
          "thread": "FakeThread",
        },
      ],
      "contentType": "text/javascript",
      "id": "a",
      "loadedState": "loaded",
      "text": "function a() {
  return a 
}",
      "url": "http://localhost:8000/examples/a",
    },
  },
]
`;

exports[`breakpoints should not show a breakpoint that does not have text 1`] = `Array []`;

exports[`breakpoints should remap breakpoints on pretty print 1`] = `
Object {
  "astLocation": Object {
    "index": 0,
    "name": undefined,
    "offset": Object {
      "column": 0,
      "line": 1,
      "sourceId": "a.js",
      "sourceUrl": "http://localhost:8000/examples/a.js",
    },
  },
  "disabled": false,
  "generatedLocation": Object {
    "column": 0,
    "line": 1,
    "sourceId": "a.js",
    "sourceUrl": "http://localhost:8000/examples/a.js",
  },
  "id": "a.js:1:",
  "location": Object {
    "column": 0,
    "line": 1,
    "sourceId": "a.js/originalSource-d6d70368d5c252598541e693a7ad6c27",
    "sourceUrl": "http://localhost:8000/examples/a.js:formatted",
  },
  "options": Object {
    "condition": null,
    "hidden": false,
    "logValue": null,
  },
  "originalText": "function a() {",
  "text": "function a() {",
}
`;

exports[`breakpoints should show a disabled breakpoint that does not have text 1`] = `
Array [
  Object {
    "breakpoints": Array [
      Object {
        "astLocation": Object {
          "index": 0,
          "name": undefined,
          "offset": Object {
            "column": 1,
            "line": 5,
            "sourceId": "a",
            "sourceUrl": "http://localhost:8000/examples/a",
          },
        },
        "disabled": true,
        "generatedLocation": Object {
          "column": 1,
          "line": 5,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "id": "a:5:1",
        "location": Object {
          "column": 1,
          "line": 5,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "options": Object {
          "condition": null,
          "hidden": false,
          "logValue": null,
        },
        "originalText": "",
        "text": "",
      },
    ],
    "source": Object {
      "actors": Array [
        Object {
          "actor": "a-actor",
          "source": "a",
          "thread": "FakeThread",
        },
      ],
      "contentType": "text/javascript",
      "id": "a",
      "loadedState": "loaded",
      "text": "function a() {
  return a 
}",
      "url": "http://localhost:8000/examples/a",
    },
  },
]
`;
